Fixed some of the padding issues on mobile on homepage and about page

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h1 {
 
 
 h2 {
-  font-size: 1.414em;
+  font-size: 1.999em;
   margin-top: 1.414em;
   margin-bottom: 1.414em;
 }
@@ -99,17 +99,6 @@ h3 {
   h1 {
   font-size: 2.827em;
   }
-
-  h2 {
-    font-size: 1.999em;
-    margin-top: 1.414em;
-    margin-bottom: 1.414em;
-  }
-
-  h3 {
-  font-size: 1.414em;
-  }
-
 }
 
 p {
@@ -633,10 +622,6 @@ footer p {
   min-height: 425px;
 }
 
-.about-title {
-  margin-bottom: 0;
-}
-
 .about-img {
   flex: 1 0 100%;
   margin: 1em 0;
@@ -654,10 +639,6 @@ footer p {
 }
 
 @media only screen and (min-width: 992px) {
-  .about-title {
-    margin: 1em 0;
-  }
-
   .about-img {
     flex: 0 0 48%;
     width: 48%;
@@ -719,10 +700,11 @@ footer p {
   padding-bottom: 40px;
 }
 
-.services-title {
-  margin-top: 0;
-  margin-bottom: 1em;
-  align-self: flex-end;
+@media only screen and (min-width: 768px) {
+  .services-title {
+    margin-top: 0;
+    align-self: flex-end;
+  }
 }
 
 .services-subtitle {
@@ -942,7 +924,6 @@ height: 100% !important;
 
 .reviews-title {
   color: #fff;
-  margin-bottom: 1.5em;
   align-self: flex-start;
 }
 
@@ -992,10 +973,22 @@ height: 100% !important;
   color: #fff;
 }
 
+.estimate-text {
+  margin-top: 0;
+}
+
 @media only screen and (min-width:768px) {
   .estimate-title {
     text-align: right;
   }
+
+  .estimate-text {
+    margin-top: 1em;
+  }
+}
+
+.estimate-button {
+  margin-bottom: 40px;
 }
 
 .estimate-item {
@@ -1040,7 +1033,12 @@ height: 100% !important;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  padding: 0 15%;
+}
+
+@media only screen and (min-width: 768px) {
+  .about-service-picture {
+    padding: 0 15%;
+  }
 }
 
 .about-service-subtitle {
